# firstQtProject

./: .$SBC-Client.drawio.bkp  .$SBC-Client.drawio.dtmp  SBC-Client.drawio
Client/: CMakeLists.txt  CMakeLists.txt.user.3ee0680
Client/ClientConsole/: CMakeLists.txt  main.cpp
Client/ClientCore/: CMakeLists.txt  bleclient.cpp  bleclient.h  bluetoothutils.cpp  bluetoothutils.h  clientcore.cpp  clientcore.h  eventbus.cpp  eventbus.h  logger.cpp  logger.h
Client/ClientGui/: CMakeLists.txt  ClientGui.qmlproject  ClientGui.qmlproject.qtds  ClientGui.qmlproject.qtds.45a9e8b  ClientGui.qmlproject.qtds.81d04c7  ClientGui.qmlproject.qtds.f6feb27  clientgui.cpp  clientgui.h  icons.qrc  qmlcomponents  qmlinterface.cpp  qmlinterface.h  qmlmodules  resources.qrc
Client/ClientGui/content/: App.qml  CMakeLists.txt  Designs.qml  Main.ui.qml  Screen01.ui.qml  Screen02.ui.qml  Screen03.ui.qml  Settings.ui.qml  resources.qrc
Client/ClientGui/imports/: CMakeLists.txt
Client/ClientGui/imports/ClientGui/: CMakeLists.txt  qmldir
Client/ClientGui/imports/ClientGui/designer/: plugin.metainfo
Client/ClientGui/src/: import_qml_plugins.h  main.cpp
SBC/: CMakeLists.txt  CMakeLists.txt.user.3ee0680
SBC/SBCConsole/: CMakeLists.txt  main.cpp
SBC/SBCCore/: CMakeLists.txt  bleserver.cpp  bleserver.h  sbccore.cpp  sbccore.h  sbcio.cpp  sbcio.h
SBC/SBCGui/: CMakeLists.txt  SBCGui.qmlproject  SBCGui.qmlproject.qtds  qmlcomponents  qmlinterface.cpp  qmlinterface.h  qmlmodules  sbcgui.cpp  sbcgui.h
SBC/SBCGui/content/: App.qml  Screen01.ui.qml
SBC/SBCGui/imports/: CMakeLists.txt
SBC/SBCGui/imports/SBCGui/: CMakeLists.txt  qmldir
SBC/SBCGui/imports/SBCGui/designer/: plugin.metainfo
SBC/SBCGui/src/: import_qml_plugins.h  main.cpp
